# roscon23_moveit

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml  roscon23_moveit.repos
config/: moveit_cpp.yaml
launch/: moveit_cpp_tutorial.launch.py
roscon23_moveit/: CMakeLists.txt  package.xml
roscon23_moveit/launch/: roscon23_moveit.launch.py
roscon23_moveit/src/: main.cpp
roscon23_moveit_config/: CMakeLists.txt  package.xml
roscon23_moveit_config/config/: gen3.srdf  kinematics.yaml
roscon23_moveit_config/description/: gen3_7dof.xacro
src/: main.cpp
