<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roscon23_moveit</name>
  <version>0.0.0</version>
  <description>MoveIt examples for IK and motion planning using constraints and costs</description>
  <maintainer email="henningkayser@picknik.ai">Henning Kayser</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kinova_gen3_7dof_robotiq_2f_85_moveit_config</exec_depend>
  <exec_depend>pick_ik</exec_depend>
  <exec_depend>moveit_planners</exec_depend>

  <depend>backward_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>moveit_ros</depend>
  <depend>moveit_visual_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
